--- a/outlines.css
+++ b/outlines.css
@@ -20,11 +20,11 @@ span{
 }
 
 nav {
-    background-image: url("1.jpg");
+    background-image: linear-gradient(rgba(0,0,0, 1), 5%, rgba(0,0,0,0.1)), url("1.jpg");
     background-position: center;
     background-attachment: scroll;
     width: 100%;
-    height: 420px;
+    height: 450px;
     font-size: 16px;
     background-repeat: no-repeat;
     opacity: 0.9;
@@ -35,16 +35,18 @@ nav {
         display: inline;
         text-align: center;
         align-items: center;
+        /*
         border-radius: 10px;
         border: 2px solid;
         background-color: rgba(255, 20, 147, 0.75);
+         */
         padding: 10px 28px;
         font-size: 18px;
         font-family: 'Comfortaa', 'Comic Sans MS', 'Arial', serif;
     }
 
     .FirstElem{
-        margin-left:3%
+        margin-left:5%
     }
 
     .LastElem{
@@ -52,7 +54,7 @@ nav {
     }
 
     .Logo {
-        margin-top: 340px;
+        margin-top: 365px;
         margin-left: 31%;
         width: fit-content;
         border-radius: 10px;
