--- a/outlines.css
+++ b/outlines.css
@@ -18,7 +18,6 @@ span{
     font-family: GillSans, 'Comfortaa', 'Comic Sans MS', 'Arial', serif;
     font-size: 50px;
 }
-
 nav {
     background-image: linear-gradient(rgba(0,0,0, 1), 5%, rgba(0,0,0,0.1)), url("1.jpg");
     background-position: center;
@@ -28,44 +27,39 @@ nav {
     font-size: 16px;
     background-repeat: no-repeat;
     opacity: 0.9;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
 
-    .Nav {
+    & .Nav {
+        flex-flow: row nowrap;
         text-decoration: none;
         color: snow;
         display: inline;
-        text-align: center;
-        align-items: center;
-        /*
-        border-radius: 10px;
-        border: 2px solid;
-        background-color: rgba(255, 20, 147, 0.75);
-         */
         padding: 10px 28px;
         font-size: 18px;
         font-family: 'Comfortaa', 'Comic Sans MS', 'Arial', serif;
     }
+}
 
-    .FirstElem{
-        margin-left:5%
-    }
+.Logo {
+    z-index: 9999;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: -50px;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 10px;
+    padding: 0.5%;
+    background-color: rgba(0, 0, 0, 0.75);
+    left: 50%;
+    transform: translate(-50%,-50%);
+    flex-flow: row nowrap;
 
-    .LastElem{
-        margin-right: 3%;
-    }
-
-    .Logo {
-        margin-top: 365px;
-        margin-left: 31%;
-        width: fit-content;
-        border-radius: 10px;
-        padding-left: 1%;
-        padding-right: 1%;
-        background-color: rgba(0, 0, 0, 0.75);
-
-        & span{
-            font-family: GillSans, Arial, serif;
-            font-weight: bold;
-        }
+    & span{
+        font-family: GillSans, Arial, serif;
+        font-weight: bold;
     }
 }
 
@@ -140,10 +134,10 @@ nav {
 .Albums{
     text-decoration: none;
     color: snow;
-    /*display: inline;*/
     text-align: center;
     align-items: center;
     display: table;
+    margin: 0px auto;
 
     & figure {
         display: table-cell;
