--- a/outlines.css
+++ b/outlines.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 h4, p, cite, pre{
     color: snow;
     font-family: GillSans, 'Comfortaa', 'Comic Sans MS', 'Arial', serif;
@@ -6,6 +9,10 @@ h4, p, cite, pre{
 
 #Albums, #Who, #Contacts{
     border: 1px solid snow;
+    scroll-margin-top: 1em;
+}
+#Main{
+    scroll-margin-top: 1em;
 }
 
 h1{
@@ -18,20 +25,29 @@ span{
     font-family: GillSans, 'Comfortaa', 'Comic Sans MS', 'Arial', serif;
     font-size: 50px;
 }
-nav {
-    background-image: linear-gradient(rgba(0,0,0, 1), 5%, rgba(0,0,0,0.1)), url("1.jpg");
+
+.Main{
+    background-image: linear-gradient(rgba(0,0,0, 1), 10%, rgba(0,0,0,0.1)), url("1.jpg");
     background-position: center;
     background-attachment: scroll;
-    width: 100%;
     height: 450px;
-    font-size: 16px;
+    width: 100%;
     background-repeat: no-repeat;
+}
+div.Nav {
+    background: rgba(0, 0, 0, 0.9);
+    font-size: 16px;
     opacity: 0.9;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-evenly;
 
-    & .Nav {
+    & a {
+        overflow: hidden;
         flex-flow: row nowrap;
         text-decoration: none;
         color: snow;
@@ -40,6 +56,11 @@ nav {
         font-size: 18px;
         font-family: 'Comfortaa', 'Comic Sans MS', 'Arial', serif;
     }
+
+    & a:hover{
+        color: deeppink;
+        text-decoration: underline deeppink;
+    }
 }
 
 .Logo {
@@ -47,7 +68,7 @@ nav {
     position: absolute;
     display: flex;
     justify-content: center;
-    margin-top: -50px;
+    margin-top: 400px;
     width: fit-content;
     height: fit-content;
     border-radius: 10px;
