--- a/outlines.css
+++ b/outlines.css
@@ -131,7 +131,94 @@ nav {
     }
 }
 
-.Albums{
+* {box-sizing: border-box}
+.mySlides {
+    display: none;
+    text-align: center;
+    align-items: center;
+}
+.slideshow-container {
+    max-width: 40%;
+    max-height: 40%;
+    margin-left: 30%;
+    position: relative;
+}
+/* Кнопки next & previous*/
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 10px;
+    user-select: none;
+}
+/* Измените положение "next button" */
+.next {
+    right: 0;
+}
+/* Добавьте черный фоновый цвет с небольшой прозрачностью*/
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+/* Подпись под изображением */
+.text {
+    text-decoration: none;
+    color: snow;
+    font-family: GillSans, 'Comfortaa', 'Comic Sans MS', 'Arial', serif;
+    font-size: 16px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+/* Точки/маркеры/указатели */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #999999;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+    background-color: snow;
+}
+
+/*.Albums {
+    text-decoration: none;
+    color: snow;
+    text-align: center;
+    align-items: center;
+    margin: 0px auto;
+}
+
+.Album {
+    width: 30%;
+    height: 30%;
+    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+    display: inline-block;
+
+    & .Text{
+        text-decoration: none;
+        color: snow;
+        font-family: GillSans, 'Comfortaa', 'Comic Sans MS', 'Arial', serif;
+        font-size: 14px;
+    }
+}
+ */
+
+/*.Albums{
     text-decoration: none;
     color: snow;
     text-align: center;
@@ -152,7 +239,7 @@ nav {
         font-size: 14px;
     }
 }
-
+*/
 body{
     background-color: rgba(0, 0, 0, 0.9);
 }
